# build-with-agent

./: .env.template  .gitignore  README.md
.github/workflows/: ci.yml  lint.yml
example_mcp/: tools.py
lab1/: README.md
lab1/handson/: session-note.md
lab1/handson/agents/lab1_memo_agent/: agent.py  tools.py
lab1/handson/agents/lab1_trip_agent/: agent.py
lab1/handson/data/: trip-note.md
lab1/solution/: pyproject.toml
lab1/solution/agents/lab1_memo_agent/: __init__.py  __main__.py  agent.py  tools.py
lab1/solution/agents/lab1_trip_agent/: agent.py
lab1/solution/tests/: test_agent.py  test_tools.py
lab2/: README.md
lab2/handson/: pyproject.toml
lab2/handson/agents/lab2_trip_agent/: agent.py  tools.py
lab2/solution/: plan-notes.md  pyproject.toml
lab2/solution/agents/lab2_trip_agent/: __init__.py  __main__.py  agent.py  tools.py
lab2/solution/outputs/: budget-breakdown.json  one-day-itinerary.md
lab2/solution/tests/: test_agent.py  test_memory_callback.py
lab3/: README.md
lab3/handson/: mcp_server.py  pyproject.toml
lab3/handson/agents/lab3_meeting_agent/: __init__.py  __main__.py  adk_support.py  agent.py  tools.py
lab3/handson/agents/lab3_meeting_agent/expert/: __init__.py  agent.py
lab3/solution/: mcp_server.py  plan-notes.md
lab3/solution/agents/lab3_meeting_agent/: agent.py  tools.py
lab3/solution/agents/lab3_meeting_agent/expert/: agent.py
lab3/solution/outputs/: backup-meetup-plan.md  group-chat-update.md
lab3/solution/tests/: test_agent.py  test_expert_agent.py  test_memory_callback.py
