[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workshop-agent-lab2-handson"
version = "0.1.0"
description = "Short Gemini lab with DuckDuckGo MCP search and memory"
requires-python = ">=3.11"
dependencies = [
  "google-genai==1.70.0",
  "google-adk==1.28.1",
]

[project.optional-dependencies]
dev = [
  "black>=25.1,<26.0",
  "mypy>=1.14,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<1.0",
]

[tool.setuptools.package-dir]
"" = "agents"

[tool.setuptools.packages.find]
where = ["agents"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
