[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workshop-agent-lab3-handson"
version = "0.1.0"
description = "Advanced ADK and A2A workshop handson"
requires-python = ">=3.11"
dependencies = [
  "google-adk[a2a]==1.28.1",
  "google-genai==1.70.0",
  "mcp==1.27.0",
  "pillow>=11.2,<12.0",
  "pydantic-settings>=2.10,<3.0",
  "uvicorn>=0.34,<1.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.1,<26.0",
  "mypy>=1.14,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<1.0",
  "types-Pillow",
]

[tool.setuptools.package-dir]
"" = "agents"

[tool.setuptools.packages.find]
where = ["agents"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["agents", "apps", "remote_a2a"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:.*EXPERIMENTAL.*:UserWarning",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
plugins = ["pydantic.mypy"]
